k3s-cluster/kube-apps/manifests/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: home.homelab
      http:
        paths:
          - path: /longhorn
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
